k8s-apps/my_recipe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-recipe
  namespace: my-recipe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-recipe
  template:
    metadata:
      labels:
        app: my-recipe
    spec:
      containers:
      - name: my-recipe
        image: zaid/my-recipe:336b00ac29f4b544e87aa3359a5567b212cb7045
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: recipe-data
          mountPath: /app/data
        - name: recipe-uploads
          mountPath: /app/uploads
      volumes:
      - name: recipe-data
        persistentVolumeClaim:
          claimName: my-recipe-data-pvc
      - name: recipe-uploads
        persistentVolumeClaim:
          claimName: my-recipe-uploads-pvc
