k8s-apps/my_recipe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-recipe-service
  namespace: my-recipe
spec:
  selector:
    app: my-recipe
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
