k8s-apps/my_recipe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: my-recipe-ingress
  namespace: my-recipe
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca-issuer

spec:
  ingressClassName: traefik

  tls:
  - hosts:
      - recipe.lab
    secretName: recipe-lab-tls

  rules:
  - host: recipe.lab

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: my-recipe-service
            port:
              number: 5000
